fix:reduce page flicker

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 /* HEADER */
 
 .page-header {
